# skillDiff

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
examples/: new_skill.yaml  old_skill.yaml
rules/: default.yaml  risk_policy.yaml
skilldiff/: __init__.py  cli.py  loader.py  models.py  normalizer.py  report.py  risk_engine.py  semantic_engine.py  utils.py
tests/: test_loader.py  test_normalizer.py  test_risk_engine.py  test_semantic_engine.py  test_skilldiff.py
