[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skilldiff"
version = "0.1.0"
description = "Compare AI skill versions and report behavioral changes"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
    "rich>=13.0",
    "click>=8.1",
    "jinja2>=3.1",
]

[project.scripts]
skilldiff = "skilldiff.cli:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["skilldiff*"]
