[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "skilldiff"
version = "0.1.0"
description = "Behavioral diff tool for AI skills — detects what changed, not just what text changed"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Irtaqa Naveed", email = "irtaqanaveed07@gmail.com" }]
keywords = ["ai", "security", "diff", "enterprise", "skills", "llm", "agentic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "rich>=13.0",
    "jinja2>=3.1",
]

[project.scripts]
skilldiff = "skilldiff.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["skilldiff*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
